apps/homelab-web/envs/dev/patch-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-web-api
  namespace: homelab-web
spec:
  rules:
    - host: portal.dev.homelab.local
