apps/homelab-web/envs/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-web
  namespace: homelab-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: portal.dev.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab-web
                port:
                  number: 80
