apps/homelab-web/envs/dev/networkpolicy-allow-ingress-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-oauth2-proxy
  namespace: homelab-web
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 4180
